<?xml version="1.0" encoding="utf-8"?>

<LinearLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" 
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<TextView 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/dbEdit_title" 
			android:textSize="20sp"
			android:padding="10dip"/>
	
	<LinearLayout 
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:padding="10dip">

		<TextView 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/dbEdit_comment" />
		<EditText 
			android:id="@+id/comment" 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:layout_weight="1"/>
	</LinearLayout>
	
	<LinearLayout 
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:padding="10dip">
		
		
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/dbEdit_ipadd" />
		<EditText 
	 		android:id="@+id/ipadd" 
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:scrollbars="vertical" />
	</LinearLayout>
	
	<LinearLayout 
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:padding="10dip">
		
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/dbEdit_macadd" />
		<EditText 
	 		android:id="@+id/macadd" 
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:scrollbars="vertical" />
	</LinearLayout>
	
	<LinearLayout 
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:padding="10dip">
		<Button 
			android:id="@+id/save" 
			android:text="@string/dbEdit_save"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:layout_weight="1"/>
		<Button 
			android:id="@+id/cancel" 
			android:text="@string/dbEdit_cancel"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:layout_weight="1"/>
	</LinearLayout>
</LinearLayout>